Version - 2.8 - 
-Added additional checks so that helpful error messages are given if species names are accidentally left in as a column in timeList for bin_cal3TimePaleoPhy and bin_timePaleoPhy, thanks Victoria Arbour for this bug report
-

Version - 2.7 - 04-12-16
-Modified probAnc documetentation so that indirect descendant examples are shown
-Modified probAnc so that calculated NaN values are replaced with zero and a message is printed
-Added name and length checks to horizonSampRate, and code to resort names so they match if not input correctly
-Modified plotTraitgram to allow input of simulated node values, edited and clarified documentation and examples
-Small changes to order of arguments in bin_cal3TimePaleoPhy
-Added argument maxAttempts to simFossilRecord so that simFossilRecord will end after some number of failed attempts. Default is Inf. Thanks W. Andrew Barr for this suggestion in issue #1!
-Added example for bin_timePaleoPhy with minimum node ages AND random resolution of polytomies
-Fixed bug pointed out by Armin Elsler of Bristol, that randomly resolving polytomies and setting minimum node ages with bin_timePaleoPhy led to an error, due to bin_timePaleoPhy resolving polytomies before sending to timePaleoPhy (which leads to errors)
-Modified cal3TimePaleoPhy so that if randres=TRUE and node age minimums were used, that node age locks were applied to the correct nodes post random resolution of polytomies

Version - 2.6 - 12-01-15
-Fixed an issued with fossilRecord2fossilRanges where a dataset with a single taxon resulted in a fatal error regarding an attempt to replace more elements than already exists
-Fixed issue with merging cryptic taxa in fossilRecord2fossilRanges
-Discovered slight stochastic element in minBranchLength where order of edges mattered, and I apparently used sample() to choose the next edge, which means I was an idiot in 2011. Thanks to Manabu Sakamoto for reporting this very difficult to notice bug.